test_suite/tests/ui/fail/invalid_attribute_key/invalid_command_key.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_key.rs:3:1
  |
3 | #[command(abc="hello")]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: invalid `command` key: `abc`
